# advprog

./: .gitignore  README.md  Resource.md  course-checklist.md  main.py  notes.txt  pyproject.toml
01-deep-core/: README.md
01-deep-core/01-dict/: README.md
01-deep-core/01-stdtypes/: 01-str.md  02-match-case.md  03-bytes.md  README.md  context.md  dataclass.md  dict.md  exception.md  exec.md  f-string显示.md  fractions.md  list.md  portfolio.md  theater.md  tuple.md  解构.md  输入输出.md
01-deep-core/02-generic-and-typing-hints/: 02_type_dict.py  Overloaded-Signatures.md  README.md  Type-Hints-In-Function.md  TypeDict.md
01-deep-core/02-random/: art.py
01-deep-core/02-typing-hints/: 02_type_dict.py  TypeDict.md
01-deep-core/03-iterator-generator/: 01-generator.md
01-deep-core/04-tuple/: tuple.md
01-deep-core/05-interface-protocal-abcs/: Interface-protocol-ABCs.md
01-deep-core/06-python-test/: 01_fixture_test.py  02_mark_parametrize_test.py  README.md
01-deep-core/07-high-order-functions/: README.md  (+4 more)
03_stacks/: README.md  calculator.py  stacks.py
04_actors/: README.md  actors.py  address.py  cancel.py  manager.py  messages.py  messages2.py  messages3.py  refactor.py
05_elevator/: dynamic_cls.py  elevator.py
T01_basic/: art.py
T02_context/: README.md
c-corecore/: C程序结构.md  README.md  hello.c  hello.cpp  input.c  notes.md  格式化.md
checklist/: python-master.md
learn-to-code-by-solving-problems/: README.md  main.py  pyproject.toml
modern-java/: README.md  hello.java  linkedmap.java  resources.md  vavrtuple.java
ts-core/: README.md  Resources.md
(+272 files in other folders)
