[project]
name = "advprog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "ipython>=9.15.0",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "requests>=2.34.2",
]
[tool.black]
target-version = ['py313']
